--- a/main.tex
+++ b/main.tex
@@ -60,10 +60,10 @@
 
 
 \section{Foreword}
-In transitioning to advanced classes, a physics student will find their familiar mathematical tools are inadequate to describe certain physical phenomena. The methods of traditional vector calculus in three dimensions, though very useful in electromagnetism and classical mechanics, are not always usable in higher dimensions or in spaces more abstract than Euclidean space, such as those used in general relativity and Hamiltonian mechanics. For that, we need differential geometry. When trying to learn a subject in mathematics, however, you tend to find books written for mathematicians, in a language that mathematicians are familiar with. As such, they are filled with long definitions, proofs, and prose that, while mathematically very precise, isn't exactly light reading, and can even be overkill for a proper physical understanding. 
+In transitioning to advanced classes, a physics student will find their familiar mathematical tools are inadequate to describe certain physical phenomena. The methods of traditional vector calculus in three dimensions, though very useful in electromagnetism and classical mechanics, are not always usable in higher dimensions or in spaces more abstract than Euclidean space, such as those used in general relativity and Hamiltonian mechanics. For that, we need differential topology, which lays the foundation for differential geometry. When trying to learn a subject in mathematics, however, you tend to find books written for mathematicians, in a language that mathematicians are familiar with. As such, they are filled with long definitions, proofs, and prose that, while mathematically very precise, isn't exactly light reading, and can even be overkill for a proper physical understanding. 
 
 When mathematicians write for mathematicians, they develop and motivate their mathematical tools for the purposes of ease of calculation and proofs. There is, of course, nothing wrong with this. Mathematicians ought to be writing for mathematicians, and we shouldn't try to force the constraints of our field on theirs. For physicists, however, proofs and ease of calculation are not the fundamental problems. Rather, we are trying to mathematically codify, organize, and characterize physical phenomena. The math that we use, therefore, ought to be entirely physically motivated. When the math is developed properly for our purposes in physics, there shouldn't be any ``purely mathematical" constructs without an actual physical meaning. We do not claim that we have fully achieved this goal here,\footnote{This is the greater goal of the Assumptions of Physics project as a whole} as there are open, unresolved problems in our work, which will be addressed when appropriate. 
-What follows is a purely physical treatment of differential topology used in physics. While it is less mathematically rigorous than a typical math textbook, the hope is that the reader will be able to gain an intuition for the math they use, so that the math isn't simply a black box beyond understanding, and that further study in the subject will be aided by a solid grounding here. Furthermore, by clarifying the underlying physical assumptions that we are working with at each step of the way, we will be more certain of the meaning of each of our mathematical tools, as well as the results we are able to derive.  The focus is always on readability, applicability, and physicality.
+What follows is a purely physical treatment of differential topology used in physics. While it is less mathematically rigorous than a typical math textbook, the hope is that the reader will be able to gain an intuition for the math they use, so that the math isn't simply a black box beyond understanding, and that further study in the subject will be aided by a solid grounding here. Furthermore, by clarifying the underlying physical assumptions that we are working with at each step of the way, we will be more certain of the meaning of each of our mathematical tools, as well as the results we are able to derive.  The focus is always on readability, applicability, and physicality. 
 
 
 When we say ``physical", we refer to properties and characteristics that we can directly measure in a laboratory. This definition is, at the moment, up for refinement. Every tool we have in physics will at some level be an abstraction. Even something as simple as measuring mass will be to a certain extent ``nonphysical." We cannot say, for instance, that an object in our laboratory is \emph{precisely} 5 kg, as our precision depends on the tools that we are using. We can say that it is 5 $\pm 0.01$ kg, but this error isn't a quantity that we directly measure. It would also not be correct to say that it is purely a mathematical abstraction. It is properly motivated given physical considerations, due to the fact that our measurements are not infinitely precise. 
@@ -160,7 +160,7 @@ X \arrow[r, "Q", leftrightarrow] & \mathbb{R}^n \\
 Y \arrow[r, "Q|_Y", leftrightarrow] \arrow[u, hook] & \mathbb{R}^k \arrow[u, hook]
 \end{tikzcd}
 \end{center}
-\caption{$Q|_Y$ is restriction notation. It means that it is the function $Q$ mapping between $X$ and $\mathbb{R}^n$, but restricted to map only from $Y$ to $\mathbb{R}^k$. We can use this notation as $Y$ and $\mathbb{R}^k$ are subsets of $X$ and $\mathbb{R}^n$, respectively.}
+\caption{$Q|_Y$ is restriction notation. It means that it is the function $Q$ mapping between $X$ and $\mathbb{R}^n$, but restricted to map only from $Y$ to $\mathbb{R}^k$. We can use this notation since $Y$ and $\mathbb{R}^k$ are subsets of $X$ and $\mathbb{R}^n$, respectively.}
 \end{figure}
 
 
@@ -302,7 +302,7 @@ g_{k-1}(\sigma^{k-1}) \to g_{k-1}(\sigma^{k-1}) + \eth h_{k-2}(\sigma^{k-1}) = g
 
 
 
-This introduction of the exact functional $\eth h$ keeps the value of $g(\sigma)$ invariant IF $\sigma$ is closed: $\partial\sigma = \emptyset$. However, it is not necessarily invariant if $\sigma$ is not closed: $\partial\sigma \neq \emptyset$. An transformation on a functional that keeps that functional invariant on closed surfaces, but not on open surfaces is a \textbf{gauge transformation}. 
+This introduction of the exact functional $\eth h$ keeps the value of $g(\sigma)$ invariant \emph{if} $\sigma$ is closed: $\partial\sigma = \emptyset$. However, it is not necessarily invariant if $\sigma$ is not closed: $\partial\sigma \neq \emptyset$. An transformation on a functional that keeps that functional invariant on closed surfaces, but not necessarily on open surfaces, is a \textbf{gauge transformation}. 
 
 \begin{defn}
 	Suppose we have a k-functional $f \in F_k$ and k-surface $\sigma \in S^k$. A \textbf{gauge transformation} $G: F_k \to F_k$ is a transformation on functionals such that if $\sigma$ is closed, then $G(f)(\sigma) = f(\sigma)$.
@@ -594,7 +594,7 @@ In many treatments of Electromagnetism (for example, ``Classical Electromagnetic
 
 We want to examine now how the exterior derivative explicity affects k-forms when written out in component form. In general, we have that for $\omega_k \in \Omega_k$, \begin{gather}\omega_k = \omega_{ab...c}e^a\wedge e^b \wedge ... \wedge e^c.\end{gather} It must be that an integral over the exterior derivative of a form results in one of the degrees of freedom being integrated away, putting the integral strictly on the boundary of the k-surface. \begin{gather} \eth \omega_k = \partial_a\omega_{bc...d}e^a\wedge e^b\wedge e^c\wedge ... \wedge e^d.\end{gather} So, suppose we have $f \in \Omega_0$, $v \in \Omega_1$, and $B \in \Omega_2$, and we apply the exterior derivative to each of them. We have that \begin{gather}\eth f = \partial_a f e^a,\end{gather} \begin{gather}\eth v = \partial_a v_b e^a \wedge e^b,\end{gather} and \begin{gather}\eth B = \partial_a B_{bc} e^a\wedge e^b \wedge e^c.\end{gather} 
 
-By looking closer at these expressions, we see familiar tools from vector calculus arise. $\partial_a f e^a$ is a 1-form consisting of the sum of derivatives in each of the basis directions. In the 3D case, we have that \begin{gather}\partial_a f e^a = \frac{\partial f}{\partial x^1} e^1 + \frac{\partial f}{\partial x^2} e^2 + \frac{\partial f}{\partial x^3} e^3.\end{gather} This is simply the gradient of a scalar functional. So, we have that in $\mathbb{R}^3$, \begin{gather}\partial_a f e^a = \nabla f.\end{gather} Similarly, we see that in 3D, $\eth v$ will give us a 2-form from a 1-form, composed of the sum of derivatives in the directions perpendicular to the original 1-form. That is, in $\mathbb{R}^3$,\begin{gather}\eth v = \partial_a v_b e^a\wedge e^b = (\frac{\partial v_2}{\partial x^3} - \frac{\partial v_3}{\partial x^2})e^2\wedge e^3 - (\frac{\partial v_1}{\partial x^3} - \frac{\partial v_3}{\partial x^1})e^1 \wedge e^3 + (\frac{\partial v_1}{\partial x^2} - \frac{\partial v_2}{\partial x^1})e^1 \wedge e^2.\end{gather} Similarly, we find that \begin{gather} \eth B = \partial_a B_{bc}e^a\wedge e^b\wedge e^c = (\frac{\partial B_1}{\partial x^1} + \frac{\partial B_2}{\partial x^2} + \frac{\partial B_3}{\partial x^3})e^1\wedge e^2 \wedge e^3.\end{gather} We see here that $\eth v$ doesn't \emph{quite} give us $\nabla \times v$, and $\eth B$ doesn't \emph{quite} give us $\nabla \cdot B$. This discrepancy demonstrates the difference between the wedge product and the cross product. Had we done $\nabla \times v$, the first term would have been $(\frac{\partial v_2}{\partial x^3} - \frac{\partial v_3}{\partial x^2})e^1$. That is, in the direction perpendicular to $e^2\wedge e^3$. This is similarly true for the components in $e^1\wedge e^3$ and $e^1 \wedge e^2$. Furthermore, $\nabla \cdot B$ returns a scalar\footnote{Note however that $\nabla \cdot B$ doesn't even return a true scalar. Rather, it returns a pseudoscalar: $\frac{\rho}{\epsilon_0}$. The difference here is similar to the difference between vector and pseudovector: if you flip one of the coordinates, you get an extra minus sign in a pseudoscalar, but a scalar is left invariant. Pseudovectors are associated with surfaces, and pseudoscalars are associated with volumes (hence, charge \textit{density} $\rho$.)} (i.e., no direction), while $\eth B$ returns a volume in the $e^1 \wedge e^2 \wedge e^3$ ``direction." This discrepancy is resolved by the introduction of the Hodge Dual Operator $*$, such that $*\eth v = \nabla \times v$ and $*\eth B = \nabla \cdot B$, but this is beyond us at the moment. What does hold immediately true is a generalization of the expression \begin{gather} \nabla \times \nabla V = 0\end{gather} for any scalar function $V$. For any form $\omega_k \in \Omega_k$, we have that \begin{gather} \eth\eth\omega_k = 0.\end{gather}
+By looking closer at these expressions, we see familiar tools from vector calculus arise. $\partial_a f e^a$ is a 1-form consisting of the sum of derivatives in each of the basis directions. In the 3D case, we have that \begin{gather}\partial_a f e^a = \frac{\partial f}{\partial x^1} e^1 + \frac{\partial f}{\partial x^2} e^2 + \frac{\partial f}{\partial x^3} e^3.\end{gather} This is simply the gradient of a scalar functional. So, we have that in $\mathbb{R}^3$, \begin{gather}\partial_a f e^a = \nabla f.\end{gather} Similarly, we see that in 3D, $\eth v$ will give us a 2-form from a 1-form, composed of the sum of derivatives in the directions perpendicular to the original 1-form. That is, in $\mathbb{R}^3$,\begin{gather}\eth v = \partial_a v_b e^a\wedge e^b = (\frac{\partial v_2}{\partial x^3} - \frac{\partial v_3}{\partial x^2})e^2\wedge e^3 - (\frac{\partial v_1}{\partial x^3} - \frac{\partial v_3}{\partial x^1})e^1 \wedge e^3 + (\frac{\partial v_1}{\partial x^2} - \frac{\partial v_2}{\partial x^1})e^1 \wedge e^2.\end{gather} Similarly, we find that \begin{gather} \eth B = \partial_a B_{bc}e^a\wedge e^b\wedge e^c = (\frac{\partial B_1}{\partial x^1} + \frac{\partial B_2}{\partial x^2} + \frac{\partial B_3}{\partial x^3})e^1\wedge e^2 \wedge e^3.\end{gather} We see here that $\eth v$ doesn't \emph{quite} give us $\nabla \times v$, and $\eth B$ doesn't \emph{quite} give us $\nabla \cdot B$. This discrepancy demonstrates the difference between the wedge product and the cross product. Had we done $\nabla \times v$, the first term would have been $(\frac{\partial v_2}{\partial x^3} - \frac{\partial v_3}{\partial x^2})e^1$. That is, in the direction perpendicular to $e^2\wedge e^3$. This is similarly true for the components in $e^1\wedge e^3$ and $e^1 \wedge e^2$. Furthermore, $\nabla \cdot B$ returns a scalar\footnote{Note however that $\nabla \cdot B$ doesn't even return a true scalar. Rather, it returns a pseudoscalar: $\frac{\rho}{\epsilon_0}$ if $B$ is an electric field. The difference here is similar to the difference between vector and pseudovector: if you flip one of the coordinates, you get an extra minus sign in a pseudoscalar, but a scalar is left invariant. Pseudovectors are associated with surfaces, and pseudoscalars are associated with volumes (hence, charge \textit{density} $\rho$.)} (i.e., no direction), while $\eth B$ returns a volume in the $e^1 \wedge e^2 \wedge e^3$ ``direction." This discrepancy is resolved by the introduction of the Hodge Dual Operator $*$, such that $*\eth v = \nabla \times v$ and $*\eth B = \nabla \cdot B$, but this is beyond us at the moment. What does hold immediately true is a generalization of the expression \begin{gather} \nabla \times \nabla V = 0\end{gather} for any scalar function $V$. For any form $\omega_k \in \Omega_k$, we have that \begin{gather} \eth\eth\omega_k = 0.\end{gather}
 
 
 You may be asking now, ``But what about $\nabla \times \nabla \times B$ for $B \in \Omega_1$? This gives us $\nabla (\nabla \cdot B) - \nabla^2 B$, which certainly isn't zero in general. Didn't we show just that curl is really just the exterior derivative of a one-form?" The issue is, once again, that the exterior derivative of a one form isn't \emph{quite} the same thing as a curl of a vector field. This discrepancy arises because of the difference between the wedge product $\wedge$ and the cross product $\times$. For two vectors $a$ and $b$, $a \times b$ gives a vector perpendicular to the two of them, while the wedge product deals only with the two original tangent vectors. 
@@ -648,7 +648,7 @@ Through what we've done here, we've shown that when properly motivated, more eso
 
 The point of this is that, mathematically speaking, a great deal of what we do in physics is broken up into discrete conceptual chunks, but doesn't have to be. Electromagnetism is introduced with gradient, divergence, and curl, though these tools do not generalize into higher dimensions. K-forms can be combined arbitrarily, in the same way that states in Quantum Mechanics can be through the tensor product, and for the same reason both may not be arbitrarily decomposed. And observations and measurements may be considered as functionals over surfaces. Yet, these divisions between mathematical concepts need not be done, and the similarities need not be coincidental. By combining the thought process under one consistent umbrella of math, and thereby simplifying it, the math used in physics doesn't have to be so esoteric, and is in fact quite transparent. 
 
-There are, naturally, certain topics that we would have liked to cover, but were not able to, though they would have definitely led to interesting results. We would have, for instance, wished to bridge the gap into formal geometry through the introduction of the metric tensor and symplectic form. The former would have allowed us to define length (purposefully excluded from the discussion of k-functionals) and angles. The latter would have allowed a discussion of densities and areas, as well as an introduction into Hamiltonian mechanics. Furthermore, an aspect that remains unclear to us is a consistent concept of orientation. Is it based on manifolds being orientable, and so perhaps requiring perpendicularity, and therefore the metric tensor, or is it a ``direction" of integration of k-forms over k-vectors? This is not clear to us now, and remains an open avenue for study. 
+There are, naturally, certain topics that we would have liked to cover, but were not able to, though they would have definitely led to interesting results. We would have, for instance, wished to bridge the gap into formal geometry through the introduction of the metric tensor and symplectic form. The former would have allowed us to define length (purposefully excluded from the discussion of k-functionals) and angles. The latter would have allowed a discussion of densities and areas, as well as an introduction into Hamiltonian mechanics. Furthermore, an aspect that remains unclear to us is a consistent concept of orientation. Is it based on manifolds being orientable, and so perhaps requiring perpendicularity, and therefore the metric tensor, or is it a ``direction" of integration of k-forms over k-vectors? These, and many other topics, remain open avenues for study. 
 
 
 
